--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -9,7 +9,7 @@ pipelines:
     default:
         - step:
             script: # Modify the commands below to build your repository.
-             - PACKAGE_PATH="${GOPATH}/src/bitbucket.org/${BITBUCKET_REPO_OWNER}/${BITBUCKET_REPO_SLUG}"
+             - PACKAGE_PATH="${GOPATH}/src/github.com/${BITBUCKET_REPO_OWNER}/${BITBUCKET_REPO_SLUG}"
              - mkdir -pv "${PACKAGE_PATH}"
              - tar -cO --exclude-vcs --exclude=bitbucket-pipelines.yml . | tar -xv -C "${PACKAGE_PATH}"
              - cd "${PACKAGE_PATH}"
